tests/invalid/tuple_index_non_int/main.py
t: tuple[int, int, int] = (1, 2, 3)
b: float = 1.0
print(t[b])
